# vicell

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  __build.bat  __build_check.ps1  arm-virt-blk.dtb  arm-virt.dtb  cliff.toml  create_ramdisk.py  do_build.bat  doom_build_debug.txt  gen_disk.ps1  repomix-output.xml  run-arm-virt.ps1  run-gui.ps1  run-hypervisor-arm.ps1  run-rv32-virt.ps1  run-tests.ps1  run-x86.ps1  run.ps1
.cargo/: config.toml
.codebase/: agent.md
.github/: FUNDING.yml
.logs/: hook-log.jsonl
cells/apps/init/: Cargo.toml
cells/apps/init/src/: main.rs
cells/apps/net-tools/: Cargo.toml
cells/apps/robot-dashboard/: Cargo.toml
cells/apps/shell/: Cargo.toml  build.rs
cells/apps/shell/src/: cmd_fs.rs  cmd_sys.rs  commands.rs  config_client.rs  executor.rs  main.rs  parser.rs  shell.rs
cells/apps/silo-test/: Cargo.toml
cells/apps/utils/: Cargo.toml
cells/demos/adc-demo/: Cargo.toml  adc-demo-arm64.ld
cells/demos/adc-demo/src/: main.rs
cells/demos/can-demo/: Cargo.toml  can-demo-arm64.ld  can-demo.ld
cells/demos/doom/: Cargo.toml  build.rs
cells/demos/doom/src/: main.rs
cells/demos/pwm-demo/: Cargo.toml  pwm-demo.ld
cells/demos/sdk-demo/: Cargo.toml  sdk-demo.ld
cells/demos/sdk-demo/src/: main.rs
cells/demos/sensor-demo/: Cargo.toml  sensor-demo-arm64.ld  sensor-demo.ld
cells/demos/sensor-demo/src/: sht3x.rs
cells/demos/spi-demo/: Cargo.toml  spi-demo-arm64.ld  spi-demo.ld
cells/demos/spi-demo/src/: main.rs
cells/demos/tetris/: Cargo.toml
cells/demos/tetris-c/: Cargo.toml  build.rs
cells/demos/tetris-c/src/: main.rs
cells/demos/tetris-c/src/c/: vicell_platform.c
cells/demos/tetris-lua/: Cargo.toml  build.rs
cells/demos/tetris-lua/scripts/: tetris.lua
cells/demos/tetris-lua/src/: ffi.rs  main.rs
cells/demos/tetris-lua/src/c/: lua_game_stubs.c
cells/demos/tetris/src/: draw.rs  game.rs  main.rs
cells/demos/viui-demo/: Cargo.toml  build.rs
cells/demos/viui-demo/src/: main.rs
cells/drivers/disk/: Cargo.toml
cells/drivers/disk/src/: lib.rs
cells/drivers/gpio/: Cargo.toml
cells/drivers/gpio-sifive/: Cargo.toml
cells/drivers/gpio/src/: lib.rs
design/: 00-context.md  03-runtime.md  08-power.md  09-vfs.md  10-testing.md  11-shell.md
docs/: API.md  ARCHITECTURE.md  CODING_GUIDE.md  FAQ.md  IDEAS.md  INSTALLATION.md  ONBOARDING.md  PATTERNS.md  README.md  TECH_STACK.md  api-reference.md  app-development-guide.md  code-standards.md  codebase-summary.md  display-api.md  getting-started.md  hardware-dev-guide.md  input-api.md  (+11 more)
hal/core/: Cargo.toml
hal/core/src/: lib.rs
kernel/: Cargo.toml  build.rs  linker-aarch32.ld  linker-aarch64.ld  linker-x86-32.ld  linker-x86-64.ld  linker.ld  x86_32-unknown-none.json
kernel/src/: acpi.rs  audit.rs  boot.rs  cell.rs  fast_ipc.rs  loader.rs  main.rs  measurement_log.rs  memory.rs  platform.rs  policy.rs  resource_registry.rs  sha256.rs  snapshot.rs  task.rs
kernel/src/boot/: limine.rs
kernel/src/cell/: metadata.rs  registry.rs  state_stash.rs
kernel/src/embedded/: cat  config  doom  echo  hello  init  input  ls  lua  shell  vfs
kernel/src/embedded-aarch64/: init
kernel/src/fs/: fat.rs
kernel/src/hypervisor/: registry.rs
kernel/src/loader/: disk_layout.rs  early.rs  elf.rs  elf_tests.rs  reloc.rs  va_alloc.rs
kernel/src/memory/: cell_quota.rs  frame.rs  heap.rs  paging.rs  rt_heap.rs  stage2.rs
kernel/src/snapshot/: mod.rs
kernel/src/task/: drivers.rs  hart_local.rs  scheduler.rs  smp.rs  stack.rs  syscall.rs  tcb.rs  tests.rs  waker.rs
kernel/src/task/drivers/: blk_nvme.rs  block.rs  console_drv.rs  gpio_irq.rs  input_map.rs  iommu.rs  iommu_pt.rs  iommu_riscv.rs  iommu_x86.rs  mmc.rs  nic_e1000.rs  pcie_ecam.rs  ramdisk.rs  uart.rs  virtio_blk.rs  virtio_common.rs  virtio_gpu.rs  virtio_hal.rs  virtio_input.rs  virtio_net.rs  virtio_sound.rs
kernel/src/task/drivers/mmc/: core.rs  emmc.rs  regs.rs  sd.rs  sdhci.rs
kernel/src/task/hart_local/: ready.rs
libs/api/: Cargo.toml
libs/api/src/: async_io.rs  benchmark.rs  config.rs  disk.rs  fast_ipc.rs  ipc.rs  lib.rs  manifest.rs  net.rs  posix.rs  syscall.rs  syscall_tests.rs  task.rs
libs/api/src/posix/: alloc.rs  cxxabi.rs  entropy.rs  math.rs  net.rs  setjmp.rs  stdio.rs  stdio_fmt.rs  strings.rs  sysio.rs
libs/ostd/: Cargo.toml  LICENSE-EXCEPTION
libs/ostd/src/: cap.rs  clients.rs  collections.rs  dispatch.rs  fast_ipc.rs  font.rs  fs.rs  input.rs  io.rs  lib.rs  mmio.rs  service.rs  silo.rs  startup.rs  syscall.rs  tls.rs
libs/ostd/src/clients/: net.rs
libs/viui/: Cargo.toml
libs/viui/src/: animation.rs  app_runner.rs  canvas.rs  dirty.rs  elm.rs  event.rs  executor.rs  font_context.rs  gles2_canvas.rs  gpu_canvas.rs  gpu_cmd.rs  gpu_renderer.rs  layout.rs  lib.rs  node.rs  node_widgets.rs  overlay.rs  prelude.rs  render_ctx.rs  renderer.rs  response.rs  signal.rs  state_store.rs  surface_renderer.rs  theme.rs  widget.rs  widgets.rs  window.rs
libs/viui/src/node_widgets/: button.rs  card.rs  checkbox.rs  column.rs  dialog.rs  divider.rs  dropdown.rs  image.rs  label.rs  list_view.rs  progress_bar.rs  row.rs  scroll_area.rs  slider.rs  space.rs  text_edit.rs  toast.rs  touch_area.rs
libs/viui/src/widgets/: button.rs  checkbox.rs  column.rs  image.rs  label.rs  row.rs  scroll_area.rs  space.rs  text_edit.rs
tests/boot-unit/: Cargo.toml
tests/boot-unit/src/: main.rs
tests/integration/: Cargo.toml
tests/integration/.cargo/: config.toml
tests/integration/src/: lib.rs
tests/integration/tests/: aarch64-boot.rs  boot.rs  compositor-cursor.rs  handoff.rs  nic-x86.rs  nvme-x86.rs  periph-can-pwm-adc.rs  robot-demo-e2e.rs  shell-utils.rs  virtio-x86.rs
tools/vi-compiler/: Cargo.toml
tools/vi-compiler/src/: ast.rs  codegen.rs  error.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
tools/vi-compiler/tests/: codegen_tests.rs  parser_tests.rs
tools/vi-compiler/tests/fixtures/: counter.vi
tools/viui-build/: Cargo.toml
tools/viui-build/.cargo/: config.toml
tools/viui-build/src/: lib.rs
(+924 files in other folders)
