# ViCell v0.2 Workspace - Cell-Based Architecture

[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/types",
    "libs/api",
    "libs/ostd",
    
    # HAL
    "hal/core",
    "hal/traits/arch",
    "hal/traits/timer",
    "hal/traits/interrupt",
    "hal/traits/uart",
    "hal/traits/gpio",
    "hal/traits/mmc",
    "hal/traits/display",
    "hal/arch/riscv",
    "hal/arch/arm",
    "hal/arch/x86",
    
    # Cells - Drivers
    "cells/drivers/disk",
    "cells/drivers/gpio",
    "cells/drivers/gpu",
    "cells/drivers/input",
    "cells/drivers/net",
    "cells/drivers/serial",
    "cells/drivers/wasm",
    
    # Cells - Services
    "cells/services/vfs",
    "cells/services/compositor",
    "cells/services/net",
    "cells/services/input",
    "cells/services/power",
    "cells/services/config",
    
    # Cells - Apps
    "cells/apps/init",
    "cells/apps/shell",
    "cells/apps/bench",
    "cells/apps/vfs-test",
    "cells/apps/wasm",
    "cells/apps/hello",
    "cells/apps/periph-demo",
    "cells/apps/periph-test",
    "cells/apps/robot-demo",
    "cells/apps/utils",
    "cells/apps/sys-tools",
    "cells/apps/net-tools",
    "cells/apps/https-demo",
    "cells/apps/test-isolation",

]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["ViCell Team"]

[workspace.dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
