# ViCell v0.2 Workspace - Cell-Based Architecture

[workspace]
resolver = "2"
# tools/ contains standalone std crates (vi-compiler, viui-build) with their own
# [workspace] roots — exclude them so Cargo doesn't see multiple workspace roots.
exclude = [
    "tools/vi-compiler",
    "tools/viui-build",
    "third_party/redoxfs",   # vendored fork — own resolver; consumed via path dep
]
members = [
    "kernel",
    "libs/types",
    "libs/api",
    "libs/ostd",
    "libs/viui",
    "libs/viui-macros",
    
    # HAL
    "hal/core",
    "hal/traits/arch",
    "hal/traits/timer",
    "hal/traits/interrupt",
    "hal/traits/uart",
    "hal/traits/gpio",
    "hal/traits/i2c",
    "hal/traits/spi",
    "hal/traits/mmc",
    "hal/traits/display",
    "hal/arch/riscv",
    "hal/arch/arm",
    "hal/arch/x86",
    
    # Cells - Drivers
    "cells/drivers/disk",
    "cells/drivers/gpio",
    "cells/drivers/gpu",
    "cells/drivers/input",
    "cells/drivers/net",
    "cells/drivers/i2c-gpio",
    "cells/drivers/spi-gpio",
    "cells/drivers/gpio-sifive",
    "cells/drivers/serial",
    "cells/drivers/wasm",
    
    # Cells - Services
    "cells/services/vfs",
    "cells/services/compositor",
    "cells/services/net",
    "cells/services/input",
    "cells/services/power",
    "cells/services/config",
    
    # Cells - Apps
    "cells/apps/init",
    "cells/apps/shell",
    "cells/apps/bench",
    "cells/apps/vfs-test",
    "cells/apps/srv-test",
    "cells/apps/wasm",
    "cells/apps/hello",
    "cells/apps/periph-demo",
    "cells/apps/periph-test",
    "cells/apps/sensor-demo",
    "cells/apps/spi-demo",
    "cells/apps/gpio-test-rv",
    "cells/apps/robot-demo",
    "cells/apps/sys-tools",
    "cells/apps/net-tools",
    "cells/apps/https-demo",
    "cells/apps/posix-shim-test",
    "cells/apps/test-isolation",
    "cells/apps/viui-demo",
    "cells/apps/robot-dashboard",

]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["ViCell Team"]

[workspace.dependencies]
spin     = { version = "0.9",  default-features = false, features = ["spin_mutex"] }
fontdue  = { version = "0.9",  default-features = false, features = ["hashbrown"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
