# ViCell v0.2 Workspace - Cell-Based Architecture

[workspace]
resolver = "2"
# tools/ contains standalone std crates (vi-compiler, viui-build) with their own
# [workspace] roots — exclude them so Cargo doesn't see multiple workspace roots.
exclude = [
    "tools/vi-compiler",
    "tools/viui-build",
    "third_party/redoxfs",   # vendored fork — own resolver; consumed via path dep
    "third_party/mlibc",     # mlibc vendored copy — built with Meson, not Cargo
    # cell-build is a build-script helper (uses std) — it compiles only for the host
    # as a [build-dependency]; excluding it keeps `cargo check` from trying to
    # compile it for the bare-metal target (riscv64gc-unknown-none-elf).
    "libs/cell-build",
]
members = [
    "kernel",
    "libs/types",
    "libs/api",
    "libs/ostd",
    "libs/mlibc-shim",
    "libs/viui",
    "libs/viui-macros",
    
    # HAL
    "hal/core",
    "hal/traits/arch",
    "hal/traits/timer",
    "hal/traits/interrupt",
    "hal/traits/uart",
    "hal/traits/gpio",
    "hal/traits/i2c",
    "hal/traits/spi",
    "hal/traits/pwm",
    "hal/traits/adc",
    "hal/traits/can",
    "hal/traits/mmc",
    "hal/traits/display",
    "hal/traits/hypervisor",
    "hal/arch/riscv",
    "hal/arch/arm",
    "hal/arch/x86",
    
    # Cells - Drivers
    "cells/drivers/disk",
    "cells/drivers/gpio",
    "cells/drivers/gpu",
    "cells/drivers/i2c-gpio",
    "cells/drivers/spi-gpio",
    "cells/drivers/pwm-gpio",
    "cells/drivers/adc-sim",
    "cells/drivers/can-loopback",
    "cells/drivers/gpio-sifive",
    "cells/drivers/serial",
    "cells/drivers/wasm",
    
    # Cells - Services
    "cells/services/vfs",
    "cells/services/compositor",
    "cells/services/net",
    "cells/services/input",
    "cells/services/power",
    "cells/services/config",
    "cells/services/hypervisor",
    "cells/services/silo",
    "cells/services/httpd",

    # Cells - Tools (system + CLI)
    "cells/tools/init",
    "cells/tools/shell",
    "cells/tools/sys-tools",
    "cells/tools/net-tools",
    "cells/tools/wasm",

    # Cells - Apps (user applications)
    "cells/apps/robot-dashboard",

    # Cells - Demos (hardware/feature demos + games)
    "cells/demos/doom",
    "cells/demos/tetris",
    "cells/demos/tetris-c",
    "cells/demos/tetris-lua",
    "cells/demos/hello",
    "cells/demos/hello-cell",
    "cells/demos/periph-demo",
    "cells/demos/sensor-demo",
    "cells/demos/spi-demo",
    "cells/demos/pwm-demo",
    "cells/demos/adc-demo",
    "cells/demos/can-demo",
    "cells/demos/robot-demo",
    "cells/demos/https-demo",
    "cells/demos/viui-demo",
    "cells/demos/sdk-demo",
    "cells/demos/audio-demo",

    # Cells - Tests
    "cells/tests/bench",
    "cells/tests/vfs-test",
    "cells/tests/srv-test",
    "cells/tests/hypervisor-test",
    "cells/tests/gpio-test-rv",
    "cells/tests/periph-test",
    "cells/tests/posix-shim-test",
    "cells/tests/c-math-smoke",
    "cells/tests/mlibc-smoke",
    "cells/tests/test-isolation",
    "cells/tests/input-test",
    "cells/tests/silo-test",

    # Cells - Runtimes
    "cells/runtimes/lua",

]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["ViCell Team"]

[workspace.dependencies]
spin     = { version = "0.9",  default-features = false, features = ["spin_mutex"] }
fontdue  = { version = "0.9",  default-features = false, features = ["hashbrown"] }
vm-fdt   = { version = "0.3",  default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
