[package]
name = "ostd"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
types   = { path = "../types" }
api     = { path = "../api" }
spin    = { workspace = true }
fontdue = { workspace = true }
linked_list_allocator = "0.10"
hashbrown    = { version = "0.14", default-features = false, features = ["ahash"] }
# Pin once_cell to avoid nightly breakage in 1.21.x (race.rs prelude regression
# with Rust nightly 1.97+). ahash 0.8.x pulls once_cell for its no_std path.
once_cell    = { version = "=1.19.0", default-features = false }
embedded-io  = { version = "0.7",  default-features = false }
serde        = { version = "1",    default-features = false }

[features]
default = []
