# Standalone integration-test crate. It is NOT a member of the root ViCell
# workspace because the root defaults to the riscv64gc-unknown-none-elf
# (no_std) target, whereas these tests are host binaries that spawn QEMU as a
# subprocess and drive the guest over serial.
#
# Run from the repo root with an explicit host target, e.g.:
#   cargo test --manifest-path tests/integration/Cargo.toml --target x86_64-pc-windows-msvc
#
# Prerequisites: qemu-system-riscv64 on PATH, and a release kernel + disk built:
#   cargo build --release -p vicell-kernel
#   ./gen_disk.ps1
[package]
name = "vicell-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "vicell_integration_tests"
path = "src/lib.rs"

[[test]]
name = "boot"
path = "tests/boot.rs"

[[test]]
name = "handoff"
path = "tests/handoff.rs"

[[test]]
name = "aarch64-boot"
path = "tests/aarch64-boot.rs"

[[test]]
name = "vfs-quota"
path = "tests/vfs-quota.rs"

[[test]]
name = "x86_64-boot"
path = "tests/x86_64-boot.rs"

[[test]]
name = "redoxfs-srv"
path = "tests/redoxfs-srv.rs"

[[test]]
name = "nvme-x86"
path = "tests/nvme-x86.rs"

[[test]]
name = "compositor-cursor"
path = "tests/compositor-cursor.rs"

[[test]]
name = "periph-i2c-spi"
path = "tests/periph-i2c-spi.rs"

[[test]]
name = "shell-utils"
path = "tests/shell-utils.rs"

[[test]]
name = "periph-can-pwm-adc"
path = "tests/periph-can-pwm-adc.rs"

[[test]]
name = "robot-demo-e2e"
path = "tests/robot-demo-e2e.rs"

[dev-dependencies]
tempfile = "3"

# Detach from the parent workspace so the riscv64 default target is not inherited.
[workspace]
