[package]
name = "app-silo-test"
version = "0.1.0"
edition = "2021"
description = "Phase 04 Tier 3a Security Silo integration test — T1–T6 via SiloHandle IPC"

[[bin]]
name = "silo-test"
path = "src/main.rs"

[dependencies]
types  = { path = "../../../libs/types" }
api    = { path = "../../../libs/api" }
ostd   = { path = "../../../libs/ostd" }
p256   = { version = "0.13", default-features = false, features = ["ecdsa", "ecdh"] }
sha2   = { version = "0.10", default-features = false }
