[package]
name = "app-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ostd = { path = "../../../libs/ostd" }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[profile.release]
panic = "abort"
opt-level = "z"
