[package]
name = "adc-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
types            = { path = "../../../libs/types" }
api              = { path = "../../../libs/api" }
ostd             = { path = "../../../libs/ostd" }
driver-adc-sim   = { path = "../../drivers/adc-sim" }
hal-adc          = { path = "../../../hal/traits/adc" }

[[bin]]
name = "adc-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
