[package]
name = "pwm-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
types            = { path = "../../../libs/types" }
api              = { path = "../../../libs/api" }
ostd             = { path = "../../../libs/ostd" }
driver-gpio      = { path = "../../drivers/gpio" }
driver-pwm-gpio  = { path = "../../drivers/pwm-gpio" }
hal-gpio         = { path = "../../../hal/traits/gpio" }
hal-pwm          = { path = "../../../hal/traits/pwm" }

[[bin]]
name = "pwm-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
