[package]
name = "sdk-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../../../libs/types" }
api   = { path = "../../../libs/api" }
ostd  = { path = "../../../libs/ostd" }

[[bin]]
name = "sdk-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
