[package]
name = "sensor-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
types           = { path = "../../../libs/types" }
api             = { path = "../../../libs/api" }
ostd            = { path = "../../../libs/ostd" }
driver-gpio     = { path = "../../drivers/gpio" }
driver-i2c-gpio = { path = "../../drivers/i2c-gpio" }
hal-gpio        = { path = "../../../hal/traits/gpio" }
hal-i2c         = { path = "../../../hal/traits/i2c" }

[[bin]]
name = "sensor-demo"
path = "src/main.rs"

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
