[package]
name = "driver-disk"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../../../libs/types" }
api = { path = "../../../libs/api" }
ostd = { path = "../../../libs/ostd" }

[lib]
# Dual output: rlib for Rust deps, staticlib for final Cell linking
crate-type = ["rlib", "staticlib"]

[build-dependencies]
cell-build = { path = "../../../libs/cell-build" }
